[package]
name = "webkitten"
version = "0.1.0"
authors = ["Delisa Mason <iskanamagus@gmail.com>"]
license = "BSD-2-Clause"
description = "Core for running a configurable minimal browser"
homepage = "https://webkitten.delisa.me"
repository = "https://github.com/kattrali/webkitten"

[dependencies]
hlua    = "0.1.8"
toml    = "0.1.30"
getopts = "0.2.21"
log     = "0.4.8"
url     = "2.1.0"
dirs = "2.0.2"
